--- a/app.html
+++ b/app.html
@@ -13,6 +13,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https: //fonts.googleapis.com/css2? family= Lora & display=swap" rel="stylesheet">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P45KH5E7BQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P45KH5E7BQ');
+</script>
 </head>
 
 <body>
@@ -68,7 +77,7 @@
     <p>Contact us: <a href="https://www.google.com/intl/it/gmail/about/">homepiano@gmail.com</a> </p>
     <br><br>
     <a href="documentazione.html" id="copy">Documentazione</a>
-    <p id="copy"> Copyright © 2022 Home Piano</p>
+    <p id="copy"> Copyright © 2022 Home Piano</p>G-P45KH5E7BQ
   </footer>
 </body>
 </html>
