--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="icon" href="img/logo.jpg">
     <title>homepiano</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P45KH5E7BQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P45KH5E7BQ');
+</script>
 </head>
 
 <body>
@@ -51,11 +60,12 @@
   </main>
 
   <footer>
-    <a href="https://www.instagram.com/" ><img src="img/insta.png" width="60px" height="60px"</a>
+    <a href="https://www.instagram.com/" ><img src="img/insta.png" width="60px" height="60px"></a>
     <a href="https://www.facebook.com/" ><img src="img/facebook.png" width="60px" height="60px"></a><br><br>
     <p>Contact us: <a href="https://www.google.com/intl/it/gmail/about/">homepiano@gmail.com</a> </p>
     <br><br>
     <a href="documentazione.html" id="copy">Documentazione</a>
-    <p id="copy"> Copyright © 2022 Home Piano</p>
+    <p id="copy"> Copyright © 2022 Home Piano</p>G-P45KH5E7BQ
   </footer>
 </body>
+</html>
