--- a/documentazione.html
+++ b/documentazione.html
@@ -22,8 +22,10 @@ Musicca -> temi: 3 servizi: 3 usabilità: 4</p>
 
 
 <br><h2> Struttura e layout</h2>
-<img src="img/albero.png" alt="diagramma ad albero"><br>
+<img src="img/albero.png" alt="diagramma ad albero">
+<p><i>Fig.1 Organizzazione ad albero del sito</i></p><br>
 <img src="img/wa.jpeg" width="600px" alt="wireframe"><br><br>
+<p><i>Fig.2 Wireframe delle pagine html. In ordine: home, tipologie, app, pianisti</i></p><br>
 <p>La scelta grafica principale è stata quella di sviluppare l’intero sito sulla base dei colori della tastiera del pianoforte. Una sfumatura di bianco per lo sfondo, il nero per i caratteri e un grigio scuro come colore di transizione tra i due per la barra di navigazione e i buttons. Anche tutte le immagini presenti sono in bianco e nero in modo tale da rendere il layout omogeneo ed elegante  a prima vista. Un altro aspetto grafico presente in tutte le pagine del sito sono i bordi arrotondati che caratterizzano gli elementi. La font usata è san serif per il menù, i titoli e i buttons mentre per il corpo testo è stato scelto ‘Lora’, un carattere serif che rende più scorrevole la lettura mantenendo il layout della pagina più pulito e chiaro a livello visivo. Il menù e il footer sono presenti in ogni pagina nella stessa posizione, i titoli delle diverse sezioni sono allineati a sinistra e alla stessa altezza tranne nella home in cui si trova al centro. </p>
 
 <br><h2>Linguaggi e strumenti</h2>
