--- a/app.html
+++ b/app.html
@@ -25,37 +25,24 @@
 </head>
 
 <body>
-  <header class="colonna">
-    <nav class="navbar navbar-expand-lg nav-bar fixed-top navbar-dark bg-dark" id="menu">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/logob.jpg" width="70px" height="70px"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">HOME</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="tipologiee.html">TIPOLOGIE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">APP</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="pianisti.html">PIANISTI</a>
-              </li>
-            </ul>
-          </div>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu">
+      <a class="navbar-brand" href="#"><img src="img/logob.jpg" width="70px" height="70px"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link " href="index.html">HOME<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link " href="tipologiee.html">TIPOLOGIE</a>
+          <a class="nav-item nav-link active" href="#">APP</a>
+          <a class="nav-item nav-link" href="pianisti.html">PIANISTI</a>
         </div>
-      </nav> 
+      </div>
+    </nav>
   </header>
-
   <main id="app">
-  
-  
-    <div class="colonna">
+      <div class="colonna">
       <h1 class="migliori">LE MIGLIORI APP PER IMPARARE: </h1>
       <br><br><br><br><h2>Simply Piano</h2> 
       <p>è una delle app più conosciute per imparare a suonare il pianoforte ed è adatta soprattutto ai principianti. Permette di impostare il livello di abilità e di seguire corsi di apprendimento a partire dalle basi. Per accedere a tutti i corsi bisogna abbonarsi.</p>
