--- a/index.html
+++ b/index.html
@@ -23,30 +23,20 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg nav-bar fixed-top navbar-dark bg-dark" id="menu">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/logob.jpg" width="70px" height="70px"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="tipologiee.html">TIPOLOGIE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="app.html">APP</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="pianisti.html">PIANISTI</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu">
+      <a class="navbar-brand" href="#"><img src="img/logob.jpg" width="70px" height="70px"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">HOME<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link " href="tipologiee.html">TIPOLOGIE</a>
+          <a class="nav-item nav-link" href="app.html">APP</a>
+          <a class="nav-item nav-link" href="pianisti.html">PIANISTI</a>
         </div>
-      </nav>
+      </div>
+    </nav>
       <h1>HOME PIANO</h1>
       
   </header>
