--- a/pianisti.html
+++ b/pianisti.html
@@ -30,10 +30,10 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="index.html">HOME<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="index.html">HOME</a>
           <a class="nav-item nav-link" href="tipologiee.html">TIPOLOGIE</a>
           <a class="nav-item nav-link" href="app.html">APP</a>
-          <a class="nav-item nav-link active" href="#">PIANISTI</a>
+          <a class="nav-item nav-link active" href="#">PIANISTI<span class="sr-only">(current)</span></a>
         </div>
       </div>
     </nav>
