--- a/tipologiee.html
+++ b/tipologiee.html
@@ -78,7 +78,7 @@
 
           <div id="curiosita"><br>
               <h2 class="sottotitolo">Attenzione!</h2> 
-              <p class="testo">Nel caso di un pianoforte digitale, la manutenzione convenzionale non è necessaria. I pianoforti a coda e i pianoforti verticali hanno invece bisogno di manutenzione costante. L’importante è mantenerli sempre puliti e a temperature stabili; quando si tratta di accordatura e trasporto, scegliete sempre dei professionisti e se potete, stipulate un’assicurazione </p>
+              <p class="testo">Nel caso di un pianoforte digitale, la manutenzione convenzionale non è necessaria. Il pianoforte a coda e il pianoforte verticale invece hanno bisogno di manutenzione costante. Inoltre, è necessario mantenere lo strumento sempre pulito e a temperature stabili. Quando si tratta di accordatura e trasporto, è consigliabile scegliere dei professionisti e stipulare un’assicurazione. </p>
           </div><br><br>
           </div>
   </main>
