--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       
   <main><br><br>
       <div id="ultimo">
-        <p class="mb-0">Benvenut* in Home Piano, <br> qui troverai tutte le informazioni per cominciare<br> a conoscere il mondo del pianoforte. <br><br>Parleremo delle sue tipologie, di app con cui potrai <br>imparare e dei migliori pianisti da non perdere.<br><br>Buona lettura!</p>
+        <p class="mb-0">Benvenut* in Home Piano, <br> qui troverai tutte le informazioni per cominciare<br> a conoscere il mondo del pianoforte. <br><br>Parleremo delle sue tipologie, di app con cui potrai <br>imparare e di alcuni dei migliori<br> pianisti da non perdere.<br><br>Buona lettura!</p>
       </div>
       <a href="tipologiee.html" type="button" class="btn btn-outline-secondary btn-lg start">START</a>
 
