menù fisso e html

--- a/tipologiee.html
+++ b/tipologiee.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +23,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu">
+    <nav class="navbar navbar-expand-lg navbar fixed-top navbar-dark bg-dark" id="menu">
       <a class="navbar-brand" href="index.html"><img src="img/logob.jpg" width="70px" height="70px"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -73,7 +74,7 @@
                 <h2 class="sottotitolo">Pianoforte digitale</h2>
                 <p class="testo">Tastiera con almeno 88 tasti che imita il tocco di un vero pianoforte. In generale, possiamo dire che la qualità del suono e la sensazione al tocco può avvicinarsi molto a quella del pianoforte verticale. Il pianoforte digitale consente anche di produrre musica elettronica. <br><br><b>Prezzo:</b> 300 euro</p>
               </div>
-            </div>
+            </div><br>
           </div>
 
           <div id="curiosita"><br>
