--- a/app.html
+++ b/app.html
@@ -45,15 +45,15 @@
       <div class="colonna">
       <h1 class="migliori">LE MIGLIORI APP PER IMPARARE: </h1>
       <br><br><br><br><h2>Simply Piano</h2> 
-      <p>è una delle app più conosciute per imparare a suonare il pianoforte ed è adatta soprattutto ai principianti. Permette di impostare il livello di abilità e di seguire corsi di apprendimento a partire dalle basi. Per accedere a tutti i corsi bisogna abbonarsi.</p>
+      <p>è una delle app più conosciute per imparare a suonare il pianoforte ed è adatta soprattutto ai principianti. Permette di impostare il livello di abilità e di seguire corsi di apprendimento a partire dalle basi. Per accedere a tutti i corsi è necessario abbonarsi.</p>
       <a href="https://apps.apple.com/us/app/simply-piano-by-joytunes/id1019442026"><img class="imm" src="img/app.png"/></a>
       <a href="https://play.google.com/store/apps/details?id=com.joytunes.simplypiano&hl=it&gl=US"><img class="imm" src="img/play.png"/></a>
       <br><br><br><br><br><h2>Flowkey</h2>
-      <p>permette di scegliere tra centinaia di brani e lezioni interattive di tutti i livelli su note, accordi e improvvisazione. Può riconoscere le note tramite microfono o connessione MIDI.</p>
+      <p>permette di scegliere tra centinaia di brani e lezioni interattive per ogni livello su note, accordi e improvvisazione. Può riconoscere le note tramite microfono o connessione MIDI.</p>
       <a href="https://apps.apple.com/it/app/flowkey-impara-il-pianoforte/id1020357408"><img class="imm" src="img/app.png"/></a>
       <a href="https://play.google.com/store/apps/details?id=com.flowkey.app&hl=it&gl=US"><img class="imm" src="img/play.png"/></a>
       <br><br><br><br><br><h2>Perfect Piano </h2>
-      <p>funziona come una tastiera digitale. Permette di suonare focalizzandosi su una sola parte della tastiera per imparare agilmente i segreti dello strumento. Avvicinando più smartphone, si potrà ottenere l’effetto di una tastiera completa.</p>
+      <p>funziona come una tastiera digitale. Permette di suonare focalizzandosi su una sola parte della tastiera per imparare agilmente i segreti dello strumento. Avvicinando più smartphone, si può ottenere l’effetto di una tastiera completa.</p>
       <a href="https://apps.apple.com/it/app/perfect-piano-learn-to-play/id942937409?l=en"><img class="imm" src="img/app.png"/></a>
       <a href="https://play.google.com/store/apps/details?id=com.gamestar.perfectpiano&hl=it&gl=US"><img class="imm" src="img/play.png"/></a>
     </div>
