--- a/tipologiee.html
+++ b/tipologiee.html
@@ -79,7 +79,7 @@
 
           <div id="curiosita"><br>
               <h2 class="sottotitolo">Attenzione!</h2> 
-              <p class="testo">Nel caso di un pianoforte digitale, la manutenzione convenzionale non è necessaria. Il pianoforte a coda e il pianoforte verticale invece hanno bisogno di manutenzione costante. Inoltre, è necessario mantenere lo strumento sempre pulito e a temperature stabili. Quando si tratta di accordatura e trasporto, è consigliabile scegliere dei professionisti e stipulare un’assicurazione. </p>
+              <p class="testo">Il pianoforte a coda e il pianoforte verticale hanno bisogno di manutenzione costante. Il pianoforte digitale invece non necessita di manutenzione convenzionale. Inoltre, è necessario mantenere lo strumento sempre pulito e a temperature stabili. Quando si tratta di accordatura e trasporto, è consigliabile scegliere dei professionisti e stipulare un’assicurazione. </p>
           </div><br><br>
           </div>
   </main>
