--- a/pianisti.html
+++ b/pianisti.html
@@ -35,12 +35,14 @@
           <a class="nav-item nav-link" href="app.html">APP</a>
           <a class="nav-item nav-link active" href="#">PIANISTI<span class="sr-only">(current)</span></a>
         </div>
-      </div>
+      </div>  
     </nav>
+      <h1 class="migliori colonna">6 PIANISTI ITALIANI <br>DA ASCOLTARE<br>SU SPOTIFY:</h1><br><br><br><br>       
+   
   </header>
   <main>
       <div class="colonna">
-      <h1 class="migliori">6 PIANISTI ITALIANI <br>DA ASCOLTARE<br>SU SPOTIFY:</h1><br><br><br><br>       
+    
   <div class="container">
         <div class="row">
           <div class="col-4">     
