--- a/app.html
+++ b/app.html
@@ -40,10 +40,11 @@
         </div>
       </div>
     </nav>
+    
   </header>
   <main id="app">
-      <div class="colonna">
-      <h1 class="migliori">LE MIGLIORI APP PER IMPARARE: </h1>
+      <div id="colonna">
+      <h1 id="migliori">LE MIGLIORI APP PER IMPARARE: </h1>
       <br><br><br><br><h2>Simply Piano</h2> 
       <p>è una delle app più conosciute per imparare a suonare il pianoforte ed è adatta soprattutto ai principianti. Permette di impostare il livello di abilità e di seguire corsi di apprendimento a partire dalle basi. Per accedere a tutti i corsi è necessario abbonarsi.</p>
       <a href="https://apps.apple.com/us/app/simply-piano-by-joytunes/id1019442026"><img class="imm" src="img/app.png"/></a>
@@ -64,7 +65,7 @@
     <p>Contact us: <a href="https://www.google.com/intl/it/gmail/about/">homepiano@gmail.com</a> </p>
     <br><br>
     <a href="documentazione.html" id="copy">Documentazione</a>
-    <p id="copy"> Copyright © 2022 Home Piano</p>G-P45KH5E7BQ
+    <p id="copy"> Copyright © 2022 Home Piano<br>G-P45KH5E7BQ</p>
   </footer>
 </body>
 </html>
