--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       
   <main><br><br>
       <div id="ultimo">
-        <p class="mb-0">Benvenut* in Home Piano, <br> qui troverai tutte le informazioni per cominciare<br> a conoscere il mondo del pianoforte. <br><br>Parleremo delle sue tipologie, di app con cui potrai <br>imparare e di alcuni dei migliori<br> pianisti da non perdere.<br><br>Buona lettura!</p>
+        <p class="mb-0">Benvenut* in Home Piano, <br> qui troverai tutte le informazioni per cominciare<br> a conoscere il mondo del pianoforte. <br><br>Parleremo delle sue tipologie, delle app con cui <br>potrai imparare e di alcuni dei migliori<br> pianisti da non perdere.<br><br>Buona lettura!</p>
       </div>
       <a href="tipologiee.html" type="button" class="btn btn-outline-secondary btn-lg start">START</a>
 
@@ -53,9 +53,9 @@
     <a href="https://www.instagram.com/" ><img src="img/insta.png" width="60px" height="60px"></a>
     <a href="https://www.facebook.com/" ><img src="img/facebook.png" width="60px" height="60px"></a><br><br>
     <p>Contact us: <a href="https://www.google.com/intl/it/gmail/about/">homepiano@gmail.com</a> </p>
-    <br><br>
+    <br>
     <a href="documentazione.html" id="copy">Documentazione</a>
-    <p id="copy"> Copyright © 2022 Home Piano</p>G-P45KH5E7BQ
+    <p id="copy"> Copyright © 2022 Home Piano <br>G-P45KH5E7BQ</p>
   </footer>
 </body>
 </html>
