--- a/pianisti.html
+++ b/pianisti.html
@@ -37,7 +37,7 @@
         </div>
       </div>  
     </nav>
-      <h1 class="migliori colonna">6 PIANISTI ITALIANI <br>DA ASCOLTARE<br>SU SPOTIFY:</h1><br><br><br><br>       
+      <h1 id="migliori" class="colonna" >6 PIANISTI ITALIANI <br>DA ASCOLTARE<br>SU SPOTIFY:</h1><br><br><br><br>       
    
   </header>
   <main>
@@ -100,7 +100,7 @@
           <img src="img/renda.jpg" class="card-img-top" alt="Roberto Cacciapaglia">
           <div class="card-body nomi">
             <h5 class="card-title"><a href="https://open.spotify.com/artist/6HVFhSwgwPo4vIP9nZMlKV">STEFANO RENDA</a></h5>
-            <p class="card-text">Germania, 24 settembre 1995</p>
+            <p class="card-text">Crotone, 24 settembre 1995</p>
           </div></a>
         </div>
       </div>
@@ -113,7 +113,7 @@
       <p>Contact us: <a href="https://www.google.com/intl/it/gmail/about/">homepiano@gmail.com</a> </p>
     <br><br>
     <a href="documentazione.html" id="copy">Documentazione</a>
-    <p id="copy"> Copyright © 2022 Home Piano</p>G-P45KH5E7BQ
+    <p id="copy"> Copyright © 2022 Home Piano<br>G-P45KH5E7BQ</p>
     </footer>
 </body>
 </html>
