--- a/documentazione.html
+++ b/documentazione.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -55,5 +56,10 @@ Il sito vuole interrompere questi pregiudizi e permettere all’utente di pensar
 <br><h2>Promozione</h2>
 <p> Il sito è stato promosso principalmente online attraverso la condivisione del link nelle stories di Instagram e nei gruppi WhatsApp.</p>
 <br><h2> Valutazione</h2>
-<p>Gli obiettivi precedentemente proposti sono stati tutti raggiunti e superati. Il target rispecchia le aspettative e il sito ha ricevuto un feedback positivo sia da chi conosce lo strumento sia da persone che lo suonano già. Il numero di visite sul sito è stato tracciato con Google Analytics mentre su Instagram dalle visualizzazioni nelle stories.</p>
+<p>Gli obiettivi precedentemente proposti sono stati tutti raggiunti e superati. Il sito ha raggiunto 239 visualizzazioni effettuate soprattutto in Italia ma anche da utenti di Stati Uniti e Finlandia! Il target rispecchia le aspettative e il sito ha ricevuto un feedback positivo sia da parte di chi conosce lo strumento che da persone con poche informazioni a riguardo. Il numero di visite sul sito è stato tracciato con Google Analytics mentre su Instagram dalle visualizzazioni delle stories.</p>
+<img src="img/visual.jpg" width="800px" alt="wireframe"><br><br>
+<p><i>Fig.3 Numero di visualizzazioni e conteggio eventi (Google Analytics) </i></p>
+<img src="img/paesi.jpg" width="800px" alt="wireframe"><br><br>
+<p><i>Fig.4 Canali e paesi in cui sono state effettuate le visualizzazioni (Google Analytics)</i></p>
 </body>
+</html>
